[gd_scene load_steps=6 format=2]

[ext_resource path="res://scene/Menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/CreationDatabase.gd" type="Script" id=2]
[ext_resource path="res://scripts/Color_MainPanel.gd" type="Script" id=3]
[ext_resource path="res://scene/ButtonExit.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/PanelContainer.gd" type="Script" id=5]

[node name="CreationDatabase" type="Node2D"]
script = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 5 )

[node name="MainPanel" type="Panel" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
script = ExtResource( 3 )

[node name="PanelMenu" parent="PanelContainer/MainPanel" instance=ExtResource( 1 )]
anchor_left = 0.001
anchor_top = 0.002
anchor_right = 1.0
anchor_bottom = 0.056
margin_left = -0.00999999
margin_top = -0.172
margin_right = -1.0
margin_bottom = 0.183998

[node name="ButtonExit" parent="PanelContainer/MainPanel" instance=ExtResource( 4 )]

[node name="QueryPanel" type="Panel" parent="PanelContainer/MainPanel"]
anchor_left = 0.001
anchor_top = 0.075
anchor_right = 0.999
anchor_bottom = 0.998
margin_left = -1.01
margin_top = 0.0499992
margin_right = 0.00994873
margin_bottom = 0.171997

[node name="LabelCreateDatabase" type="Label" parent="PanelContainer/MainPanel/QueryPanel"]
anchor_left = 0.072
anchor_top = 0.054
anchor_right = 0.183
anchor_bottom = 0.113
margin_left = 0.351997
margin_top = -0.214001
margin_right = 0.352997
margin_bottom = -0.133003
text = "Create Database :"
align = 1
valign = 1

[node name="InputCreateDatabase" type="TextEdit" parent="PanelContainer/MainPanel/QueryPanel"]
anchor_left = 0.231
anchor_top = 0.054
anchor_right = 0.358
anchor_bottom = 0.113
margin_left = -0.0789948
margin_top = -0.214001
margin_right = -0.221985
margin_bottom = -0.133003

[node name="ButtonCreateDatabase" type="Button" parent="PanelContainer/MainPanel/QueryPanel"]
anchor_left = 0.382
anchor_top = 0.054
anchor_right = 0.469
anchor_bottom = 0.113
margin_left = -0.438019
margin_top = -0.214001
margin_right = -0.220978
margin_bottom = -0.133003
rect_min_size = Vector2( 50, 10 )
rect_clip_content = true
mouse_default_cursor_shape = 2
text = "Create"

[node name="LabelInfo" type="Label" parent="PanelContainer/MainPanel/QueryPanel"]
visible = false
anchor_left = 0.701
anchor_top = -1.846
anchor_right = 0.935
anchor_bottom = -1.308
margin_left = -378.309
margin_top = 1075.69
margin_right = -438.415
margin_bottom = 1172.63
text = "Exemple de JSON :
{
\"table1\": {
  \"0\": {
    \"nom\": \"Colonne1\",
    \"type\": \"BIGSERIAL\"
    },
  \"1\": {
    \"nom\": \"Colonne2\",
    \"type\": \"INT\"
    }
  },
\"table2\": {
  \"0\": {
    \"nom\": \"Colonne1\",
    \"type\": \"BIGSERIAL\"
    },
  \"1\": {
    \"nom\": \"Colonne2\",
    \"type\": \"TEXT\"
    }
  }
}"
clip_text = true

[node name="QueryResult" type="Panel" parent="PanelContainer/MainPanel"]
anchor_top = 0.075
anchor_bottom = 0.075
margin_left = 697.0
margin_top = 269.05
margin_right = 1009.0
margin_bottom = 541.05

[node name="LabelResult" type="Label" parent="PanelContainer/MainPanel/QueryResult"]
anchor_left = 699.065
anchor_top = 2336.11
anchor_right = 798.079
anchor_bottom = 2450.86
margin_left = -218076.0
margin_top = -635421.0
margin_right = -248841.0
margin_bottom = -666571.0
text = "Requête généré"
align = 1
valign = 1

[node name="ResultQuery" type="TextEdit" parent="PanelContainer/MainPanel/QueryResult"]
anchor_left = 644.15
anchor_top = 2623.0
anchor_right = 989.275
anchor_bottom = 4786.97
margin_left = -200975.0
margin_top = -713391.0
margin_right = -308366.0
margin_bottom = -1.3018e+06
readonly = true

[node name="ButtonCopy" type="Button" parent="PanelContainer/MainPanel/QueryResult"]
anchor_left = 0.641
anchor_top = 0.088
anchor_right = 0.923
anchor_bottom = 0.176
margin_left = 0.00799561
margin_top = 0.0639973
margin_right = 0.0239868
margin_bottom = 0.127995
mouse_default_cursor_shape = 2
text = "Copy"

[connection signal="pressed" from="PanelContainer/MainPanel/QueryPanel/ButtonCreateDatabase" to="." method="_on_ButtonCreateDatabase_pressed"]
[connection signal="pressed" from="PanelContainer/MainPanel/QueryResult/ButtonCopy" to="." method="_on_ButtonCopy_pressed"]
